z-Index Fix

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body {
     position: fixed;
     top: 30px;
     right: 30px;
-    z-index: 25;
+    z-index: -1;
 }
 
 .logo {
@@ -754,7 +754,7 @@ footer img {
         position: fixed;
         top: 10px;
         left: 10px;
-        z-index: 3;
+        z-index: -1;
     }
     
     .logo {
